[project]
name = "tldw"
version = "0.1.0"
description = "Bot de Discord que genera resúmenes de videos de YouTube, páginas web y hilos de Twitter utilizando Gemini AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord.py",
    "python-dotenv",
    "google-generativeai",
    "markitdown",
    "redis",
    "pytest",
    "pytest-asyncio"
]

[project.scripts]
tldw = "main:main"
test = "tldw.scripts:run_tests"
cov = "tldw.scripts:run_tests_with_coverage"
start = "tldw.scripts:start_bot"

[project.optional-dependencies]
dev = [
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests.py"]
python_files = ["tests.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
